# OpenGL_sandbox

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
common/include/camera/: camera.hpp
common/include/model_loader/: model_loader.hpp
common/include/shader/: shader.hpp
common/include/window/: window.hpp
common/src/camera/: camera.cpp
common/src/model_loader/: model_loader.cpp
common/src/window/: window.cpp
examples/camera/: CMakeLists.txt
examples/camera/src/: main.cpp
examples/hello_triangle/: CMakeLists.txt
examples/hello_triangle/src/: main.cpp  main.hpp
examples/hello_window/: CMakeLists.txt
examples/hello_window/src/: main.cpp
examples/models/: CMakeLists.txt
examples/models/src/: main.cpp  modelLoading.cpp  modelLoading.hpp
examples/shaders/: CMakeLists.txt
examples/shaders/src/: main.cpp
examples/textures/: CMakeLists.txt
examples/textures/src/: main.cpp
resources/assets/guitar/: strat.mtl
resources/assets/star/: star.mtl
resources/shaders/3.3/: shader.vs  star_shader.vs  star_shader_cam.vs
resources/shaders/5.1/: shader.fs  shader.vs
